# ChangeLog for media-video/linuxdvb
# Copyright 2003 Martin Hierling; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/linuxtv-dvb/Attic/ChangeLog,v 1.1 2003/06/03 09:25:14 mad Exp $


*linuxtv-dvb-1.0.0_pre2-r20030524 (02 Jun 2003)

  02 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
  initial ebuild, some parts are from Martin Holzers/Thomas Raschbachers 
  ebuild, some parts has grown at gentoo.de cvs over the last months.
  because this is from the cvs drivers (new vdr version only runs with them)
  it is considered unstable
