@@ -1,7 +1,10 @@
 # ChangeLog for media-video/linuxdvb
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/linuxtv-dvb/Attic/ChangeLog,v 1.1 2003/06/03 09:25:14 mad Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/linuxtv-dvb/Attic/ChangeLog,v 1.2 2003/06/04 08:19:00 mad Exp $
 
+*linuxtv-dvb-1.0.0_pre3 (04 Jun 2003)
+  04 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
+  new version, noting else
 
 *linuxtv-dvb-1.0.0_pre2-r20030524 (02 Jun 2003)
 
